tried fixing scrollbar

--- a/css/map-styles.css
+++ b/css/map-styles.css
@@ -155,7 +155,11 @@ h4 {
     margin-top: 10px; /* Space above the list */
 }
 
-.popup-project-list::-webkit-scrollbar-thumb {
+.mapboxgl-popup-content::-webkit-scrollbar {
+    width: 10px;
+}
+
+.mapboxgl-popup-content::-webkit-scrollbar-thumb {
     background-color: #f9de00;
 }
 
